Fix login field vertical alignment

--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,9 +1,3 @@
-.form-input {
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-
 .form-validation {
     width: 100%;
     font-size: small;
