--- a/src/app/pages/login/login.page.css
+++ b/src/app/pages/login/login.page.css
@@ -78,3 +78,9 @@
     align-items: center;
     text-align: center;
 }
+
+.form-input {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
